--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main" : "main.js",
     "dependencies" : {
 		"command-line-args":">=1.0.0",
-		"colors":">=1.1.2"
+		"colors":">=1.1.2",
+		"socket.io":">=1.3.6"
     }
 }
 
